@@ -98,6 +98,8 @@ Changes in @NEW@:
       New methods will be introduced that return new modified objects.
     * Conary no longer hangs waiting for the download thread when an error
       occured in the download thread which caused it to terminate.
+    * Conary migrate now returns an error much earlier if you are not using
+      interactive mode (CNY-826).
 
 Changes in 1.0.29:
   o Bug Fixes:
